suricatasc: a Rust implementation of suricatasc
This is a re-implementation of suricatasc program in Rust that
attempts to be a 100% drop-in replacement.

This adds 2 crates, the "client" and "suricatasc". The idea is that
the client is a more permissively licensed crate for communicating
with a Suricata server.

--- a/python/Makefile.am
+++ b/python/Makefile.am
@@ -11,9 +11,7 @@ LIBS =	\
 		suricata/sc/suricatasc.py \
 		suricatasc/__init__.py
 
-BINS =	\
-		suricatasc \
-		suricatactl
+BINS =		suricatactl
 
 EXTRA_DIST = $(LIBS) bin suricata/config/defaults.py
 
@@ -38,7 +36,6 @@ install-exec-local:
 
 uninstall-local:
 	rm -f $(DESTDIR)$(bindir)/suricatactl
-	rm -f $(DESTDIR)$(bindir)/suricatasc
 	rm -rf $(DESTDIR)$(prefix)/lib/suricata/python
 
 clean-local:
