--- a/rust/Cargo.toml.in
+++ b/rust/Cargo.toml.in
@@ -4,7 +4,13 @@ version = "@PACKAGE_VERSION@"
 edition = "2021"
 
 [workspace]
-members = [".", "./derive"]
+members = [
+    ".",
+    "derive",
+    "client",
+    "suricatasc",
+]
+default-members = [".", "suricatasc"]
 
 [lib]
 crate-type = ["staticlib", "rlib"]
@@ -23,7 +29,7 @@ debug-validate = []
 
 [dependencies]
 nom7 = { version="7.0", package="nom" }
-bitflags = "~1.2.1"
+bitflags = "~1.3.2"
 byteorder = "~1.4.2"
 uuid = "~0.8.2"
 crc = "~1.8.1"
