--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -455,6 +455,7 @@ noinst_HEADERS = \
 	runmode-erf-dag.h \
 	runmode-erf-file.h \
 	runmode-ipfw.h \
+	runmode-lib.h \
 	runmode-napatech.h \
 	runmode-netmap.h \
 	runmode-nflog.h \
@@ -474,6 +475,7 @@ noinst_HEADERS = \
 	source-erf-dag.h \
 	source-erf-file.h \
 	source-ipfw.h \
+	source-lib.h \
 	source-napatech.h \
 	source-netmap.h \
 	source-nflog.h \
@@ -1072,6 +1074,7 @@ libsuricata_c_a_SOURCES = \
 	runmode-erf-dag.c \
 	runmode-erf-file.c \
 	runmode-ipfw.c \
+	runmode-lib.c \
 	runmode-napatech.c \
 	runmode-netmap.c \
 	runmode-nflog.c \
@@ -1090,6 +1093,7 @@ libsuricata_c_a_SOURCES = \
 	source-erf-dag.c \
 	source-erf-file.c \
 	source-ipfw.c \
+	source-lib.c \
 	source-napatech.c \
 	source-netmap.c \
 	source-nflog.c \
@@ -1109,6 +1113,7 @@ libsuricata_c_a_SOURCES = \
 	stream-tcp-sack.c \
 	stream-tcp-util.c \
 	suricata.c \
+	suricata-interface.c \
 	threads.c \
 	tm-modules.c \
 	tmqh-flow.c \
@@ -1238,6 +1243,12 @@ libsuricata_c_a_SOURCES = \
 	win32-misc.c \
 	win32-service.c \
 	win32-syscall.c
+
+include_HEADERS = \
+	runmodes.h \
+	suricata-plugin.h \
+	suricata.h \
+	suricata-interface.h
 
 EXTRA_DIST = \
 	tests/stream-tcp-inline.c \
