libsuricata: run suricata as a library
This changeset is the first attempt at running suricata as a
library by allowing to create worker threads from an external client.
More in particular:
 * decode.h / flow-hash.c: Add the packet tenant_id integer to the
   flow hash generation to assign packets of the same flow to the
   same tenant.
 * examples/suricata_lib/main.c: Create a simple client able to
   open PCAPs and feed the packets into the library.
 * runmode-lib.c/.h: Add new runmode module to support running as a
   library.
 * source-lib.c/.h: Add new source module to support running as a
   library.
 * suricata.c/.h: Reorganize the code to provide a single interface
   when running as executable and as a library.
 * suricata-interface.c/.h: Add interface to the library.
 * tm*: Support "fake" threads when running as a library.

--- a/Makefile.am
+++ b/Makefile.am
@@ -9,6 +9,7 @@ EXTRA_DIST = ChangeLog COPYING LICENSE suricata.yaml.in \
 	     acsite.m4 \
 	     scripts/generate-images.sh
 SUBDIRS = $(HTP_DIR) rust src qa rules doc contrib etc python ebpf \
+          examples \
           $(SURICATA_UPDATE_DIR)
 
 CLEANFILES = stamp-h[0-9]*
