--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -399,6 +399,11 @@ noinst_HEADERS = \
 	output-filestore.h \
 	output-flow.h \
 	output.h \
+	output-callback.h \
+	output-callback-alert.h \
+	output-callback-file.h \
+	output-callback-flow.h \
+	output-callback-http.h \
 	output-json-alert.h \
 	output-json-anomaly.h \
 	output-json-bittorrent-dht.h \
@@ -517,6 +522,7 @@ noinst_HEADERS = \
 	util-action.h \
 	util-affinity.h \
 	util-atomic.h \
+	util-callbacks.h \
 	util-base64.h \
 	util-bloomfilter-counting.h \
 	util-bloomfilter.h \
@@ -546,6 +552,7 @@ noinst_HEADERS = \
 	util-ebpf.h \
 	util-enum.h \
 	util-error.h \
+	util-events.h \
 	util-exception-policy.h \
 	util-file-decompression.h \
 	util-file.h \
@@ -1012,6 +1019,11 @@ libsuricata_c_a_SOURCES = \
 	log-tlslog.c \
 	log-tlsstore.c \
 	output.c \
+	output-callback.c \
+	output-callback-alert.c \
+	output-callback-file.c \
+	output-callback-flow.c \
+	output-callback-http.c \
 	output-eve-stream.c \
 	output-file.c \
 	output-filedata.c \
