decode/flow: add exception policy stats counters
We will register stats counters for all policies, even though for now
Suri only uses one possible configuration policy at a time. The idea is
that this could change in the near future, so we want to have this
ready.

Task #5816

--- a/suricata.yaml.in
+++ b/suricata.yaml.in
@@ -74,6 +74,9 @@ stats:
   #decoder-events-prefix: "decoder.event"
   # Add stream events as stats.
   #stream-events: false
+  # Exception policy stats counters options
+  # (Note: if exception policy: ignore, counters are not logged)
+  #eps-zero-valued-counters: false  # default: false. True will log counters: 0
 
 # Plugins -- Experimental -- specify the filename for each plugin shared object
 plugins:
