doc/support-status: add support status page
Convert the wiki page,
https://redmine.openinfosecfoundation.org/projects/suricata/wiki/Support_Status
into a page that is versioned along with the user guide.

Includes many updates to reflect our current support status.

--- a/doc/userguide/Makefile.am
+++ b/doc/userguide/Makefile.am
@@ -29,6 +29,7 @@ EXTRA_DIST = \
 	setting-up-ipsinline-for-linux \
 	setting-up-ipsinline-for-linux.rst \
 	setting-up-ipsinline-for-windows.rst \
+	support-status.rst \
 	unix-socket.rst \
 	what-is-suricata.rst
 
