suricatactl: rust version of suricatactl

--- a/rust/Cargo.toml.in
+++ b/rust/Cargo.toml.in
@@ -8,9 +8,14 @@ members = [
     ".",
     "derive",
     "client",
+    "suricatactl",
     "suricatasc",
 ]
-default-members = [".", "suricatasc"]
+default-members = [
+    ".",
+    "suricatactl",
+    "suricatasc",
+]
 
 [lib]
 crate-type = ["staticlib", "rlib"]
