suricata.yaml: define SIP_PORTS

--- a/suricata.yaml.in
+++ b/suricata.yaml.in
@@ -50,7 +50,7 @@ vars:
     GENEVE_PORTS: 6081
     VXLAN_PORTS: 4789
     TEREDO_PORTS: 3544
-
+    SIP_PORTS: "[5060, 5061]"
 ##
 ## Step 2: Select outputs to enable
 ##
