--- a/.github/workflows/formatting.yml
+++ b/.github/workflows/formatting.yml
@@ -6,7 +6,11 @@ on:
     branches-ignore:
       - 'master'
       - 'master-*'
+    paths-ignore:
+      - "doc/**"
   pull_request:
+    paths-ignore:
+      - "doc/**"
 
 permissions: read-all
 
