--- a/ebpf/Makefile.am
+++ b/ebpf/Makefile.am
@@ -1,5 +1,5 @@
 EXTRA_DIST= include bypass_filter.c filter.c lb.c vlan_filter.c xdp_filter.c \
-	    xdp_lb.c bpf_helpers.h hash_func01.h
+	    xdp_lb.c hash_func01.h
 
 if BUILD_EBPF
 
@@ -18,7 +18,7 @@ all: $(BPF_TARGETS)
 
 $(BPF_TARGETS): %.bpf: %.c
 #      From C-code to LLVM-IR format suffix .ll (clang -S -emit-llvm)
-	${CLANG} -Wall $(BPF_CFLAGS) -O2 \
+	${CLANG} -Wall $(BPF_CFLAGS) -O2 -g \
 		-I/usr/include/$(build_cpu)-$(build_os)/ \
 		-D__KERNEL__ -D__ASM_SYSREG_H \
 		-target bpf -S -emit-llvm $< -o ${@:.bpf=.ll}
