--- a/suricata.yaml.in
+++ b/suricata.yaml.in
@@ -1443,6 +1443,13 @@ vlan:
 livedev:
   use-for-tracking: true
 
+# This option controls the use of packet recursion level in the flow
+# (and defrag) hashing. This is enabled by default and should be
+# disabled if packet pickup of tunneled packets occurs before the kernel
+# has put the headers on, like when using netmap pipes.
+recursion-level:
+  use-for-tracking: true
+
 # Specific timeouts for flows. Here you can specify the timeouts that the
 # active flows will wait to transit from the current state to another, on each
 # protocol. The value of "new" determines the seconds to wait after a handshake or
